# pixel-grove

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  camera.cpp  camera.h  cmake_install.cmake  cone.cpp  cone.h  cube.cpp  cylinder.cpp  cylinder.h  lab11  mainwindow.cpp  mainwindow.h  pixel-grove  qtcsettings.cmake  realtime.cpp  realtime.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h  settings.h  sphere.cpp
.cmake/api/v1/reply/: cache-v2-ca49528a8904a7b49d58.json  cmakeFiles-v1-a33b96020a6ed6533b2e.json  codemodel-v2-307433ebbdb60a4296d7.json  codemodel-v2-3b9ead7b634f81c1cfde.json  codemodel-v2-6133f43ba781815156ed.json  codemodel-v2-74681dc852a0a5b6945a.json  codemodel-v2-ca40bc495cdb1d271233.json  codemodel-v2-d24373a01a7f1525bf64.json  codemodel-v2-e6ee3897bfe435419ef7.json  index-2023-12-13T00-11-32-0874.json  index-2023-12-13T01-00-18-0892.json  index-2023-12-13T08-33-49-0637.json  index-2023-12-13T10-51-16-0162.json  index-2023-12-13T20-34-55-0683.json  index-2023-12-13T21-59-14-0602.json  target-StaticGLEW-Debug-00dbb0f70c569797c12a.json  target-StaticGLEW-Debug-095144c5649e7aaad121.json  target-StaticGLEW-Debug-3dad808ed705b7e0734f.json  target-StaticGLEW-Debug-6593cbffff6b891fbd59.json  target-StaticGLEW-Debug-bab2cf162bfb761a5581.json  target-StaticGLEW-Debug-c7dd59fc5bbcf8ccafd2.json  target-StaticGLEW-Debug-f1c0c133fcb31082f123.json  target-pixel-grove-Debug-114f25e3e21fbaedea83.json  target-pixel-grove-Debug-3d34f51ae0da8e1b1689.json  target-pixel-grove-Debug-5c2cf99953db88bb8ec7.json  target-pixel-grove-Debug-bac0e6551d72ce2686d4.json  target-pixel-grove-Debug-fb46e233c264df3c6c55.json  target-pixel-grove_other_files-Debug-4171d7031f80f15032e9.json  target-pixel-grove_other_files-Debug-6ee253635c791232e4b8.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-47a632e9b28882c4ef49.json  codemodel-v2-1b240a0930d48c58126e.json  codemodel-v2-47a12ef2540f5468df60.json  codemodel-v2-74e4966c86590272f54b.json  codemodel-v2-7a095d9b5cc1895539ee.json  codemodel-v2-f73aad0dc0f8c01f16af.json  index-2023-12-13T00-56-47-0057.json  index-2023-12-13T01-22-11-0876.json  index-2023-12-13T02-27-33-0843.json  index-2023-12-13T09-48-52-0623.json  index-2023-12-13T20-32-28-0639.json  index-2023-12-13T21-59-03-0999.json  target-StaticGLEW-Debug-470a973ebbeeaa344cf0.json  target-StaticGLEW-Debug-50be6ae4bfc2027ab1d8.json  target-StaticGLEW-Debug-92f8abb629f9c085a7fe.json  target-pixel-grove-Debug-05e226c01d52a65ba915.json  target-pixel-grove-Debug-1edb32f9eea19bf14364.json  target-pixel-grove-Debug-2a1f973a400e04c5a010.json  target-pixel-grove-Debug-ad81154ddb3cac55d28c.json  target-pixel-grove-Debug-b0f19493eaad671400bc.json  target-pixel-grove-Debug-b84faaeca182a1061a2d.json  target-pixel-grove_autogen-Debug-ab154a79f56da713b74b.json  target-pixel-grove_autogen_timestamp_deps-Debug-e6bbe95e9b31a8491343.json  target-pixel-grove_other_files-Debug-432d4fad5f7badf0cd56.json  target-pixel-grove_other_files-Debug-57cf6302cce12a24f8e6.json  target-pixel-grove_other_files-Debug-cf9b90705c86ed42f458.json
.qt/: QtDeploySupport.cmake
.rcc/: Resources.qrc
StaticGLEW_autogen/: deps
glew/auto/EGL-Registry/extensions/EXT/: EGL_EXT_output_base.txt  EGL_EXT_surface_CTA861_3_metadata.txt  EGL_EXT_surface_SMPTE2086_metadata.txt
glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
glm/gtc/: matrix_transform.hpp
glm/gtx/: transform.hpp  transform2.hpp
pixel-grove_autogen/: deps
resources/shaders/: flower.frag  flower.vert  phong.frag  phong.vert  skyblock.frag  terrain.frag  terrain.vert  texture.frag  texture.vert
src/: main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/camera/: camera.cpp  camera.h
src/flowergen/: flowers.cpp  flowers.h  lily.cpp  lily.h  rose.cpp  rose.h  stem.cpp  stem.h  sunflower.cpp  sunflower.h  tulip.cpp  tulip.h
src/skybox/: skybox_utils.h
src/terrain/: terrain.cpp  terrain.h
src/utils/: ctm_utils.h  drawables.h  emissive_s.cpp  emissive_s.h  mesh.cpp  mesh.h  scenedata.h  sceneparser.cpp  sceneparser.h  stem.cpp  stem.h
